fixed align* issues

--- a/content/notes.css
+++ b/content/notes.css
@@ -6,6 +6,7 @@
 pre.sourceCode {
     border: 1px dashed black;
     padding: 20px;
+    overflow: auto;
 }
 
 /* ------------ theorems ------------ */
@@ -110,6 +111,7 @@ img{
 /* ----------- headlines ------------- */
 h1 {
     text-decoration: underline;
+    text-align:center;
 }
 h2 {
     text-decoration: underline;
